td8/Toy-full/src/syntax.output
La règle est inutile dans l'analyseur à cause de conflits

   99 prefix: %empty


État 8 conflits: 1 décalage/réduction
État 13 conflits: 1 décalage/réduction
État 28 conflits: 1 décalage/réduction
État 35 conflits: 1 décalage/réduction
État 40 conflits: 1 décalage/réduction
État 41 conflits: 1 décalage/réduction, 2 réduction/réduction
État 43 conflits: 1 décalage/réduction
État 50 conflits: 1 décalage/réduction
État 51 conflits: 1 décalage/réduction
État 52 conflits: 1 décalage/réduction
État 53 conflits: 1 décalage/réduction
État 54 conflits: 1 décalage/réduction
État 55 conflits: 1 décalage/réduction
État 64 conflits: 1 décalage/réduction
État 70 conflits: 1 décalage/réduction
État 88 conflits: 1 décalage/réduction
État 89 conflits: 1 décalage/réduction
État 90 conflits: 1 décalage/réduction
État 91 conflits: 1 décalage/réduction
État 92 conflits: 1 décalage/réduction
État 93 conflits: 1 décalage/réduction
État 94 conflits: 1 décalage/réduction
État 95 conflits: 1 décalage/réduction
État 96 conflits: 1 décalage/réduction
État 97 conflits: 1 décalage/réduction
État 98 conflits: 1 décalage/réduction
État 99 conflits: 1 décalage/réduction
État 100 conflits: 1 décalage/réduction
État 101 conflits: 1 décalage/réduction
État 102 conflits: 1 décalage/réduction
État 103 conflits: 1 décalage/réduction
État 104 conflits: 1 décalage/réduction
État 105 conflits: 1 décalage/réduction
État 113 conflits: 1 décalage/réduction
État 114 conflits: 1 décalage/réduction
État 115 conflits: 1 décalage/réduction
État 119 conflits: 1 décalage/réduction
État 120 conflits: 1 décalage/réduction
État 121 conflits: 1 décalage/réduction
État 148 conflits: 1 décalage/réduction
État 154 conflits: 1 décalage/réduction
État 160 conflits: 1 décalage/réduction
État 166 conflits: 1 décalage/réduction
État 167 conflits: 1 décalage/réduction
État 170 conflits: 1 décalage/réduction
État 172 conflits: 1 décalage/réduction
État 181 conflits: 1 décalage/réduction
État 182 conflits: 1 décalage/réduction
État 186 conflits: 1 décalage/réduction


Grammaire

    0 $accept: program $end

    1 program: declarations

    2 declarations: declarations declaration
    3             | declaration

    4 declaration: var_decl ';'
    5            | func_decl
    6            | class_decl

    7 stmt: ';'
    8     | expr ';'
    9     | KPRINT '(' eparam_list ')' ';'
   10     | KREAD '(' param_read ')' ';'
   11     | '{' stmt_list '}'
   12     | KWHILE '(' expr ')' stmt
   13     | KFOR '(' for1 ';' for2 ';' for3 ')' stmt
   14     | KRETURN expr_opt ';'
   15     | KBREAK ';'
   16     | KIF '(' expr ')' stmt
   17     | KIF '(' expr ')' stmt KELSE stmt
   18     | var_decl ';'
   19     | prototype ';'
   20     | error ';'

   21 stmt_list: stmt_list stmt
   22          | %empty

   23 var_decl: var_decl ',' var init_var
   24         | type var init_var

   25 init_var: '=' expr
   26         | %empty

   27 type: TINT
   28     | TFLOAT
   29     | TBOOL
   30     | TSTRING
   31     | TVOID
   32     | TTNULL
   33     | IDENTIFIER

   34 for1: var_decl
   35     | expr
   36     | %empty

   37 for2: expr_opt

   38 for3: expr_opt

   39 func_decl: prototype ';'
   40          | prototype '{' stmt_list '}'

   41 prototype: type var '(' fparam_list ')'

   42 fparam_list: fparam_list ',' type var
   43            | type var
   44            | %empty

   45 param_read: param_read ',' var
   46           | var
   47           | %empty

   48 eparam_list: eparam_list ',' expr
   49            | expr
   50            | %empty

   51 class_decl: KCLASS var ';'
   52           | KCLASS var inherit '{' members_list '}' opt_semi

   53 inherit: KEXTENDS identifier
   54        | %empty

   55 members_list: members_list attr_decl
   56             | %empty

   57 attr_decl: var_decl ';'
   58          | func_decl opt_semi

   59 opt_semi: ';'
   60         | %empty

   61 expr: INTEGER
   62     | FLOAT
   63     | BOOLEAN
   64     | TNULL
   65     | STRING
   66     | designator
   67     | var '=' expr
   68     | '-' expr
   69     | '+' expr
   70     | expr '+' expr
   71     | expr '-' expr
   72     | expr '*' expr
   73     | expr '/' expr
   74     | expr '%' expr
   75     | expr POW expr
   76     | expr '<' expr
   77     | expr '>' expr
   78     | expr EQ expr
   79     | expr GE expr
   80     | expr LE expr
   81     | expr NE expr
   82     | expr KOR expr
   83     | expr KAND expr
   84     | expr KINSTANCEOF expr
   85     | KNOT expr
   86     | '(' expr ')'
   87     | expr '?' expr ':' expr
   88     | PP var
   89     | MM var
   90     | var PP
   91     | var MM

   92 expr_opt: expr
   93         | %empty

   94 var: identifier
   95    | prefix identifier

   96 call: var '(' eparam_list ')'

   97 identifier: IDENTIFIER

   98 prefix: designator '.'
   99       | %empty

  100 designator: var
  101           | call
  102           | KNEW IDENTIFIER
  103           | KTHIS


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'%' (37) 74
'(' (40) 9 10 12 13 16 17 41 86 96
')' (41) 9 10 12 13 16 17 41 86 96
'*' (42) 72
'+' (43) 69 70
',' (44) 23 42 45 48
'-' (45) 68 71
'.' (46) 98
'/' (47) 73
':' (58) 87
';' (59) 4 7 8 9 10 13 14 15 18 19 20 39 51 57 59
'<' (60) 76
'=' (61) 25 67
'>' (62) 77
'?' (63) 87
'{' (123) 11 40 52
'}' (125) 11 40 52
error (256) 20
INTEGER (258) 61
BOOLEAN (259) 63
FLOAT (260) 62
TNULL (261) 64
STRING (262) 65
IDENTIFIER (263) 33 97 102
KWHILE (264) 12
KIF (265) 16 17
KPRINT (266) 9
KRETURN (267) 14
KBREAK (268) 15
KFOR (269) 13
KREAD (270) 10
KINSTANCEOF (271) 84
TINT (272) 27
TFLOAT (273) 28
TBOOL (274) 29
TSTRING (275) 30
TVOID (276) 31
TTNULL (277) 32
KCLASS (278) 51 52
KNEW (279) 102
KEXTENDS (280) 53
KTHIS (281) 103
IFX (282)
KELSE (283) 17
KOR (284) 82
KAND (285) 83
GE (286) 79
LE (287) 80
EQ (288) 78
NE (289) 81
KNOT (290) 85
UMINUS (291)
PP (292) 88 90
MM (293) 89 91
POW (294) 75


Non-terminaux, suivis des règles où ils apparaissent

$accept (57)
    à gauche: 0
program (58)
    à gauche: 1, à droite: 0
declarations (59)
    à gauche: 2 3, à droite: 1 2
declaration (60)
    à gauche: 4 5 6, à droite: 2 3
stmt (61)
    à gauche: 7 8 9 10 11 12 13 14 15 16 17 18 19 20, à droite: 12
    13 16 17 21
stmt_list (62)
    à gauche: 21 22, à droite: 11 21 40
var_decl (63)
    à gauche: 23 24, à droite: 4 18 23 34 57
init_var (64)
    à gauche: 25 26, à droite: 23 24
type (65)
    à gauche: 27 28 29 30 31 32 33, à droite: 24 41 42 43
for1 (66)
    à gauche: 34 35 36, à droite: 13
for2 (67)
    à gauche: 37, à droite: 13
for3 (68)
    à gauche: 38, à droite: 13
func_decl (69)
    à gauche: 39 40, à droite: 5 58
prototype (70)
    à gauche: 41, à droite: 19 39 40
fparam_list (71)
    à gauche: 42 43 44, à droite: 41 42
param_read (72)
    à gauche: 45 46 47, à droite: 10 45
eparam_list (73)
    à gauche: 48 49 50, à droite: 9 48 96
class_decl (74)
    à gauche: 51 52, à droite: 6
inherit (75)
    à gauche: 53 54, à droite: 52
members_list (76)
    à gauche: 55 56, à droite: 52 55
attr_decl (77)
    à gauche: 57 58, à droite: 55
opt_semi (78)
    à gauche: 59 60, à droite: 52 58
expr (79)
    à gauche: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 85 86 87 88 89 90 91, à droite: 8 12 16 17 25
    35 48 49 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    85 86 87 92
expr_opt (80)
    à gauche: 92 93, à droite: 14 37 38
var (81)
    à gauche: 94 95, à droite: 23 24 41 42 43 45 46 51 52 67 88 89
    90 91 96 100
call (82)
    à gauche: 96, à droite: 101
identifier (83)
    à gauche: 97, à droite: 53 94 95
prefix (84)
    à gauche: 98 99, à droite: 95
designator (85)
    à gauche: 100 101 102 103, à droite: 66 98


État 0

    0 $accept: . program $end
    1 program: . declarations
    2 declarations: . declarations declaration
    3             | . declaration
    4 declaration: . var_decl ';'
    5            | . func_decl
    6            | . class_decl
   23 var_decl: . var_decl ',' var init_var
   24         | . type var init_var
   27 type: . TINT
   28     | . TFLOAT
   29     | . TBOOL
   30     | . TSTRING
   31     | . TVOID
   32     | . TTNULL
   33     | . IDENTIFIER
   39 func_decl: . prototype ';'
   40          | . prototype '{' stmt_list '}'
   41 prototype: . type var '(' fparam_list ')'
   51 class_decl: . KCLASS var ';'
   52           | . KCLASS var inherit '{' members_list '}' opt_semi

    IDENTIFIER  décalage et aller à l'état 1
    TINT        décalage et aller à l'état 2
    TFLOAT      décalage et aller à l'état 3
    TBOOL       décalage et aller à l'état 4
    TSTRING     décalage et aller à l'état 5
    TVOID       décalage et aller à l'état 6
    TTNULL      décalage et aller à l'état 7
    KCLASS      décalage et aller à l'état 8

    program       aller à l'état 9
    declarations  aller à l'état 10
    declaration   aller à l'état 11
    var_decl      aller à l'état 12
    type          aller à l'état 13
    func_decl     aller à l'état 14
    prototype     aller à l'état 15
    class_decl    aller à l'état 16


État 1

   33 type: IDENTIFIER .

    $défaut  réduction par utilisation de la règle 33 (type)


État 2

   27 type: TINT .

    $défaut  réduction par utilisation de la règle 27 (type)


État 3

   28 type: TFLOAT .

    $défaut  réduction par utilisation de la règle 28 (type)


État 4

   29 type: TBOOL .

    $défaut  réduction par utilisation de la règle 29 (type)


État 5

   30 type: TSTRING .

    $défaut  réduction par utilisation de la règle 30 (type)


État 6

   31 type: TVOID .

    $défaut  réduction par utilisation de la règle 31 (type)


État 7

   32 type: TTNULL .

    $défaut  réduction par utilisation de la règle 32 (type)


État 8

   51 class_decl: KCLASS . var ';'
   52           | KCLASS . var inherit '{' members_list '}' opt_semi
   94 var: . identifier
   95    | . prefix identifier
   96 call: . var '(' eparam_list ')'
   97 identifier: . IDENTIFIER
   98 prefix: . designator '.'
   99       | . %empty  [IDENTIFIER]
  100 designator: . var
  101           | . call
  102           | . KNEW IDENTIFIER
  103           | . KTHIS

    IDENTIFIER  décalage et aller à l'état 17
    KNEW        décalage et aller à l'état 18
    KTHIS       décalage et aller à l'état 19

    IDENTIFIER  [réduction par utilisation de la règle 99 (prefix)]

    var         aller à l'état 20
    call        aller à l'état 21
    identifier  aller à l'état 22
    prefix      aller à l'état 23
    designator  aller à l'état 24


État 9

    0 $accept: program . $end

    $end  décalage et aller à l'état 25


État 10

    1 program: declarations .  [$end]
    2 declarations: declarations . declaration
    4 declaration: . var_decl ';'
    5            | . func_decl
    6            | . class_decl
   23 var_decl: . var_decl ',' var init_var
   24         | . type var init_var
   27 type: . TINT
   28     | . TFLOAT
   29     | . TBOOL
   30     | . TSTRING
   31     | . TVOID
   32     | . TTNULL
   33     | . IDENTIFIER
   39 func_decl: . prototype ';'
   40          | . prototype '{' stmt_list '}'
   41 prototype: . type var '(' fparam_list ')'
   51 class_decl: . KCLASS var ';'
   52           | . KCLASS var inherit '{' members_list '}' opt_semi

    IDENTIFIER  décalage et aller à l'état 1
    TINT        décalage et aller à l'état 2
    TFLOAT      décalage et aller à l'état 3
    TBOOL       décalage et aller à l'état 4
    TSTRING     décalage et aller à l'état 5
    TVOID       décalage et aller à l'état 6
    TTNULL      décalage et aller à l'état 7
    KCLASS      décalage et aller à l'état 8

    $défaut  réduction par utilisation de la règle 1 (program)

    declaration  aller à l'état 26
    var_decl     aller à l'état 12
    type         aller à l'état 13
    func_decl    aller à l'état 14
    prototype    aller à l'état 15
    class_decl   aller à l'état 16


État 11

    3 declarations: declaration .

    $défaut  réduction par utilisation de la règle 3 (declarations)


État 12

    4 declaration: var_decl . ';'
   23 var_decl: var_decl . ',' var init_var

    ';'  décalage et aller à l'état 27
    ','  décalage et aller à l'état 28


État 13

   24 var_decl: type . var init_var
   41 prototype: type . var '(' fparam_list ')'
   94 var: . identifier
   95    | . prefix identifier
   96 call: . var '(' eparam_list ')'
   97 identifier: . IDENTIFIER
   98 prefix: . designator '.'
   99       | . %empty  [IDENTIFIER]
  100 designator: . var
  101           | . call
  102           | . KNEW IDENTIFIER
  103           | . KTHIS

    IDENTIFIER  décalage et aller à l'état 17
    KNEW        décalage et aller à l'état 18
    KTHIS       décalage et aller à l'état 19

    IDENTIFIER  [réduction par utilisation de la règle 99 (prefix)]

    var         aller à l'état 29
    call        aller à l'état 21
    identifier  aller à l'état 22
    prefix      aller à l'état 23
    designator  aller à l'état 24


État 14

    5 declaration: func_decl .

    $défaut  réduction par utilisation de la règle 5 (declaration)


État 15

   39 func_decl: prototype . ';'
   40          | prototype . '{' stmt_list '}'

    ';'  décalage et aller à l'état 30
    '{'  décalage et aller à l'état 31


État 16

    6 declaration: class_decl .

    $défaut  réduction par utilisation de la règle 6 (declaration)


État 17

   97 identifier: IDENTIFIER .

    $défaut  réduction par utilisation de la règle 97 (identifier)


État 18

  102 designator: KNEW . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 32


État 19

  103 designator: KTHIS .

    $défaut  réduction par utilisation de la règle 103 (designator)


État 20

   51 class_decl: KCLASS var . ';'
   52           | KCLASS var . inherit '{' members_list '}' opt_semi
   53 inherit: . KEXTENDS identifier
   54        | . %empty  ['{']
   96 call: var . '(' eparam_list ')'
  100 designator: var .  ['.']

    KEXTENDS  décalage et aller à l'état 33
    ';'       décalage et aller à l'état 34
    '('       décalage et aller à l'état 35

    '.'       réduction par utilisation de la règle 100 (designator)
    $défaut  réduction par utilisation de la règle 54 (inherit)

    inherit  aller à l'état 36


État 21

  101 designator: call .

    $défaut  réduction par utilisation de la règle 101 (designator)


État 22

   94 var: identifier .

    $défaut  réduction par utilisation de la règle 94 (var)


État 23

   95 var: prefix . identifier
   97 identifier: . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 17

    identifier  aller à l'état 37


État 24

   98 prefix: designator . '.'

    '.'  décalage et aller à l'état 38


État 25

    0 $accept: program $end .

    $défaut  accepter


État 26

    2 declarations: declarations declaration .

    $défaut  réduction par utilisation de la règle 2 (declarations)


État 27

    4 declaration: var_decl ';' .

    $défaut  réduction par utilisation de la règle 4 (declaration)


État 28

   23 var_decl: var_decl ',' . var init_var
   94 var: . identifier
   95    | . prefix identifier
   96 call: . var '(' eparam_list ')'
   97 identifier: . IDENTIFIER
   98 prefix: . designator '.'
   99       | . %empty  [IDENTIFIER]
  100 designator: . var
  101           | . call
  102           | . KNEW IDENTIFIER
  103           | . KTHIS

    IDENTIFIER  décalage et aller à l'état 17
    KNEW        décalage et aller à l'état 18
    KTHIS       décalage et aller à l'état 19

    IDENTIFIER  [réduction par utilisation de la règle 99 (prefix)]

    var         aller à l'état 39
    call        aller à l'état 21
    identifier  aller à l'état 22
    prefix      aller à l'état 23
    designator  aller à l'état 24


État 29

   24 var_decl: type var . init_var
   25 init_var: . '=' expr
   26         | . %empty  [';', ',']
   41 prototype: type var . '(' fparam_list ')'
   96 call: var . '(' eparam_list ')'
  100 designator: var .  ['.']

    '='  décalage et aller à l'état 40
    '('  décalage et aller à l'état 41

    '.'       réduction par utilisation de la règle 100 (designator)
    $défaut  réduction par utilisation de la règle 26 (init_var)

    init_var  aller à l'état 42


État 30

   39 func_decl: prototype ';' .

    $défaut  réduction par utilisation de la règle 39 (func_decl)


État 31

   21 stmt_list: . stmt_list stmt
   22          | . %empty
   40 func_decl: prototype '{' . stmt_list '}'

    $défaut  réduction par utilisation de la règle 22 (stmt_list)

    stmt_list  aller à l'état 43


État 32

  102 designator: KNEW IDENTIFIER .

    $défaut  réduction par utilisation de la règle 102 (designator)


État 33

   53 inherit: KEXTENDS . identifier
   97 identifier: . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 17

    identifier  aller à l'état 44


État 34

   51 class_decl: KCLASS var ';' .

    $défaut  réduction par utilisation de la règle 51 (class_decl)


État 35

   48 eparam_list: . eparam_list ',' expr
   49            | . expr
   50            | . %empty  [')', ',']
   61 expr: . INTEGER
   62     | . FLOAT
   63     | . BOOLEAN
   64     | . TNULL
   65     | . STRING
   66     | . designator
   67     | . var '=' expr
   68     | . '-' expr
   69     | . '+' expr
   70     | . expr '+' expr
   71     | . expr '-' expr
   72     | . expr '*' expr
   73     | . expr '/' expr
   74     | . expr '%' expr
   75     | . expr POW expr
   76     | . expr '<' expr
   77     | . expr '>' expr
   78     | . expr EQ expr
   79     | . expr GE expr
   80     | . expr LE expr
   81     | . expr NE expr
   82     | . expr KOR expr
   83     | . expr KAND expr
   84     | . expr KINSTANCEOF expr
   85     | . KNOT expr
   86     | . '(' expr ')'
   87     | . expr '?' expr ':' expr
   88     | . PP var
   89     | . MM var
   90     | . var PP
   91     | . var MM
   94 var: . identifier
   95    | . prefix identifier
   96 call: . var '(' eparam_list ')'
   96     | var '(' . eparam_list ')'
   97 identifier: . IDENTIFIER
   98 prefix: . designator '.'
   99       | . %empty  [IDENTIFIER]
  100 designator: . var
  101           | . call
  102           | . KNEW IDENTIFIER
  103           | . KTHIS

    INTEGER     décalage et aller à l'état 45
    BOOLEAN     décalage et aller à l'état 46
    FLOAT       décalage et aller à l'état 47
    TNULL       décalage et aller à l'état 48
    STRING      décalage et aller à l'état 49
    IDENTIFIER  décalage et aller à l'état 17
    KNEW        décalage et aller à l'état 18
    KTHIS       décalage et aller à l'état 19
    '+'         décalage et aller à l'état 50
    '-'         décalage et aller à l'état 51
    KNOT        décalage et aller à l'état 52
    PP          décalage et aller à l'état 53
    MM          décalage et aller à l'état 54
    '('         décalage et aller à l'état 55

    IDENTIFIER  [réduction par utilisation de la règle 99 (prefix)]
    $défaut    réduction par utilisation de la règle 50 (eparam_list)

    eparam_list  aller à l'état 56
    expr         aller à l'état 57
    var          aller à l'état 58
    call         aller à l'état 21
    identifier   aller à l'état 22
    prefix       aller à l'état 23
    designator   aller à l'état 59


État 36

   52 class_decl: KCLASS var inherit . '{' members_list '}' opt_semi

    '{'  décalage et aller à l'état 60


État 37

   95 var: prefix identifier .

    $défaut  réduction par utilisation de la règle 95 (var)


État 38

   98 prefix: designator '.' .

    $défaut  réduction par utilisation de la règle 98 (prefix)


État 39

   23 var_decl: var_decl ',' var . init_var
   25 init_var: . '=' expr
   26         | . %empty  [';', ',']
   96 call: var . '(' eparam_list ')'
  100 designator: var .  ['.']

    '='  décalage et aller à l'état 40
    '('  décalage et aller à l'état 35

    '.'       réduction par utilisation de la règle 100 (designator)
    $défaut  réduction par utilisation de la règle 26 (init_var)

    init_var  aller à l'état 61


État 40

   25 init_var: '=' . expr
   61 expr: . INTEGER
   62     | . FLOAT
   63     | . BOOLEAN
   64     | . TNULL
   65     | . STRING
   66     | . designator
   67     | . var '=' expr
   68     | . '-' expr
   69     | . '+' expr
   70     | . expr '+' expr
   71     | . expr '-' expr
   72     | . expr '*' expr
   73     | . expr '/' expr
   74     | . expr '%' expr
   75     | . expr POW expr
   76     | . expr '<' expr
   77     | . expr '>' expr
   78     | . expr EQ expr
   79     | . expr GE expr
   80     | . expr LE expr
   81     | . expr NE expr
   82     | . expr KOR expr
   83     | . expr KAND expr
   84     | . expr KINSTANCEOF expr
   85     | . KNOT expr
   86     | . '(' expr ')'
   87     | . expr '?' expr ':' expr
   88     | . PP var
   89     | . MM var
   90     | . var PP
   91     | . var MM
   94 var: . identifier
   95    | . prefix identifier
   96 call: . var '(' eparam_list ')'
   97 identifier: . IDENTIFIER
   98 prefix: . designator '.'
   99       | . %empty  [IDENTIFIER]
  100 designator: . var
  101           | . call
  102           | . KNEW IDENTIFIER
  103           | . KTHIS

    INTEGER     décalage et aller à l'état 45
    BOOLEAN     décalage et aller à l'état 46
    FLOAT       décalage et aller à l'état 47
    TNULL       décalage et aller à l'état 48
    STRING      décalage et aller à l'état 49
    IDENTIFIER  décalage et aller à l'état 17
    KNEW        décalage et aller à l'état 18
    KTHIS       décalage et aller à l'état 19
    '+'         décalage et aller à l'état 50
    '-'         décalage et aller à l'état 51
    KNOT        décalage et aller à l'état 52
    PP          décalage et aller à l'état 53
    MM          décalage et aller à l'état 54
    '('         décalage et aller à l'état 55

    IDENTIFIER  [réduction par utilisation de la règle 99 (prefix)]

    expr        aller à l'état 62
    var         aller à l'état 58
    call        aller à l'état 21
    identifier  aller à l'état 22
    prefix      aller à l'état 23
    designator  aller à l'état 59


État 41
